add dockerfile and update code for render